commented xdebug config temporarily

--- a/puppet/modules/php/files/php-cli.ini
+++ b/puppet/modules/php/files/php-cli.ini
@@ -1929,9 +1929,9 @@ ldap.max_links = -1
 ; tab-width: 4
 ; End:
 
-[Xdebug]
-zend_extension="<path to php_xdebug.dll>"
-xdebug.remote_enable=1
-xdebug.remote_port="9001"
-xdebug.profiler_enable=1
-xdebug.profiler_output_dir="/tmp"
+;[Xdebug]
+;zend_extension="<path to php_xdebug.dll>"
+;xdebug.remote_enable=1
+;xdebug.remote_port="9001"
+;xdebug.profiler_enable=1
+;xdebug.profiler_output_dir="/tmp"
